add index.html file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,53 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <h1>MY PORTFOLIO</h1>
-    <img src="images/beb.jpg" height="30%">
+    <img src="images/Mwende.jpg" width="30%">
+    <div class="personal">
+        <h2>Personal Information </h2>
+    <li>Name: Mornica Mwende</li>
+    <li>Age: 19years</li>
+    <li>Gender: Female</li>
+    <li>Nationality:Kenyan</li>
+    <li>Religion: Christian</li>
+    <li>Marital Status: Single</li>
+</ul>
+    </div>
+
+<div class="links">
+   <P>I have worked on several projects for insrance,
+       I have worked on <strong>My Girl project.</strong>. The idea behind this project was to empower the girl child in the community. We would address issues like rape, providing sanitary towels to the girls, offering guidance and counceling to the adolescent girls etc. Here is the link <a href="https://mornicamwende.github.io/My-girl/"> <span class="link"> My Girl</span> </a> <br>
+       <em>I used the following languages</em>
+       <ol>
+           <li>HTML</li>
+           <li>CSS</li>
+           <li>JAVASCRIPT</li>
+       </ol>
+     </P> 
+</div>
     
+    <div class="about me">
+        <strong>background information</strong>
+        <p> I was born and raised in Kibra Constituency, Nairobi County. <br> I was raised by a single mum together with my silings. I currently live in Kibra together with my mother <br> </p>
+    <strong>Education</strong>
+    <p>I went to Mbagathi Primary School where I attained a minimum score of 328 marks. <br> I then proceeded to St.Martins Kitwii Secondary school and managed to attain a minniumum grade of C- in the year 2018</p>
+    <p>I decided to pick up the programming course bacause of my passion in Software Develoipment ever since in high school</p>
+    </div>
+
+    <div class="hobbies">
+        <h2>HOBBIES/INTRESTS</h2>
+        <P>my hobbies include
+            <ol>
+                <li>Reading</li>
+                <li>Traveling</li>
+                <li>Watching</li>
+                <li>Playing football</li>
+                <li>nature walks</li>
+            </ol>
+        </P>
+    </div>
+
+</div>
 </body>
 </html>
