add an header to the index.html file add a paragraph to my index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-    <h1>MY PORTFOLIO</h1>
+    <h1>MY PORTFOLIO.</h1>
+   <P><strong>Welcome to my portfolio</strong></P> 
     <img src="images/Mwende.jpg" width="30%">
     <div class="personal">
         <h2>Personal Information </h2>
