add a strong tag to the index.html add a header to the index.html add a paragraph to the index.html add a link to the index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div class="container">
     <h1>MY PORTFOLIO.</h1>
-   <P><strong>Welcome to my portfolio</strong></P> 
+   <h2>Welcome to my portfolio</h2> 
     <img src="images/Mwende.jpg" width="30%">
     <div class="personal">
         <h2>Personal Information </h2>
+<ul>
     <li>Name: Mornica Mwende</li>
     <li>Age: 19years</li>
     <li>Gender: Female</li>
@@ -23,15 +24,16 @@
     </div>
 
 <div class="links">
-   <P>I have worked on several projects for insrance,
-       I have worked on <strong>My Girl project.</strong>. The idea behind this project was to empower the girl child in the community. We would address issues like rape, providing sanitary towels to the girls, offering guidance and counceling to the adolescent girls etc. Here is the link <a href="https://mornicamwende.github.io/My-girl/"> <span class="link"> My Girl</span> </a> <br>
+    <strong>projects I have worked on: </strong>
+       <P>I have worked on several projects for insrance,</P>
+       <p>I have worked on <strong>My Girl project.</strong>. The idea behind this project was to empower the girl child in the community. We would address issues like rape, providing sanitary towels to the girls, offering guidance and counceling to the adolescent girls etc. Here is the link <a href="https://mornicamwende.github.io/My-girl/"> <span class="link"> My Girl</span> </a> </p>
+       <p>I have also worked on <strong>Nyumbani Kwetu</strong> ptoject. The idea behind this project was to provide institutions with a <em>hostel management system </em> .This system would ease hostel allocations to students. The project is way better compared to the manual way of doing this. Here is the link <a href="https://richardkefa.github.io/hostel-managment"> <span class="link"> Nyumbani Kwetu</span> </a> </p> 
        <em>I used the following languages</em>
        <ol>
            <li>HTML</li>
            <li>CSS</li>
            <li>JAVASCRIPT</li>
        </ol>
-     </P> 
 </div>
     
     <div class="about me">
