add unordered list

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="hobbies">
         <h2>HOBBIES/INTRESTS</h2>
-        <P>my hobbies include
+        <P>my hobbies include.
             <ol>
                 <li>Reading</li>
                 <li>Traveling</li>
