--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <strong>background information</strong>
         <p> I was born and raised in Kibra Constituency, Nairobi County. <br> I was raised by a single mum together with my silings. I currently live in Kibra together with my mother <br> </p>
     <strong>Education</strong>
-    <p>I went to Mbagathi Primary School where I attained a minimum score of 328 marks. <br> I then proceeded to St.Martins Kitwii Secondary school and managed to attain a minniumum grade of C- in the year 2018</p>
+    <p>I went to Mbagathi road Primary School where I attained a minimum score of 328 marks. <br> I then proceeded to St.Martins Kitwii Secondary school and managed to attain a minniumum grade of C- in the year 2018</p>
     <p>I decided to pick up the programming course bacause of my passion in Software Develoipment ever since in high school</p>
     </div>
 
