add ordered list

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <em>I used the following languages</em>
        <ol>
            <li>HTML</li>
-           <li>CSS</li>
+           <li>CSS for styling properties</li>
            <li>JAVASCRIPT</li>
        </ol>
 </div>
