--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
        <P>I have worked on several projects for insrance,</P>
        <p>I have worked on <strong>My Girl project.</strong>. The idea behind this project was to empower the girl child in the community. We would address issues like rape, providing sanitary towels to the girls, offering guidance and counceling to the adolescent girls etc. Here is the link <a href="https://mornicamwende.github.io/My-girl/"> <span class="link"> My Girl</span> </a> </p>
        <p>I have also worked on <strong>Nyumbani Kwetu</strong> ptoject. The idea behind this project was to provide institutions with a <em>hostel management system </em> .This system would ease hostel allocations to students. The project is way better compared to the manual way of doing this. Here is the link <a href="https://richardkefa.github.io/hostel-managment"> <span class="link"> Nyumbani Kwetu</span> </a> </p> 
-       <em>I used the following languages:</em>
+       <em>I used the following languages in my projects:</em>
        <ol>
-           <li>HTML for building the page's skeleton</li>
-           <li>CSS for styling properties</li>
+           <li>HTML</li>
+           <li>CSS</li>
            <li>JAVASCRIPT</li>
        </ol>
 </div>
